# suchef-bot

./: .gitignore  Dockerfile  agent.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.gigaide/: gigaide.properties
assets/prompts/: decision_prompt.txt
documents/: База_знаний.txt
messages/: Нет_заказов.txt
migration/: env.py
migration/versions/: 2025_05_08_2100-37eb986e6b81_initial_revision.py
prompts/: generation_prompt.txt
scripts/: elastic.py  postgres.py
src/: config.py
src/ai_agent/: agent.py  state.py  utils.py
src/ai_agent/nodes/: __init__.py  decision_node.py  generation_node.py  orders_node.py  retriever_node.py
src/apis/: __init__.py  bonus_api.py  orders_api.py
src/consumer/: broker.py  router.py
src/core/entities/: order.py
src/core/use_cases/: __init__.py  bonus_use_case.py  chatbot_use_case.py  orders_notifications_use_case.py  orders_use_case.py  promos_use_case.py  users_use_case.py
src/database/: users.csv
src/database/crud/: user_crud.py
src/di/: container.py
src/di/providers/: __init__.py  bonus_provider.py  bot_provider.py  broker_provider.py  database_provider.py  orders_provider.py  promos_provider.py  repository_provider.py
src/gateways/: __init__.py  orders_gateway.py  orders_sender_gateway.py
src/mappers/: __init__.py  bonus_mapper.py  orders_mapper.py  promo_mapper.py
src/misc/: formatters.py
src/repository/: base_repository.py  dialog_repository.py  user_repository.py
src/suchef_bot/: constants.py  ioc.py  settings.py  utils.py
src/web_parsers/: promos_web_parser.py
(+54 files in other folders)
